--- a/cubic-ui/.env.production
+++ b/cubic-ui/.env.production
@@ -5,5 +5,6 @@ ENV = 'production'
 VUE_APP_BASE_API = '/'
 VUE_APP_PROXY_IP='localhost'
 VUE_APP_PROXY_PORT='6080'
-VUE_APP_WEBSOCKET_IP=47.104.79.116
+#VUE_APP_WEBSOCKET_IP=47.104.79.116
+VUE_APP_WEBSOCKET_IP=localhost
 VUE_APP_WEBSOCKET_PORT=11901
