--- a/cubic-proxy/src/main/resources/application.yml
+++ b/cubic-proxy/src/main/resources/application.yml
@@ -9,9 +9,12 @@ spring:
     default-property-inclusion: non_null
   datasource:
     name: test
-    url: jdbc:mysql://47.104.79.116:3366/cubic?useUnicode=true&characterEncoding=UTF8&serverTimezone=Asia/Shanghai
-    username: cubic
-    password: nxE5pGR2wRkhRAb8
+    url: jdbc:mysql://localhost:3306/cubic?useUnicode=true&characterEncoding=UTF8&serverTimezone=Asia/Shanghai
+    username: root
+    password: root
+#    url: jdbc:mysql://47.104.79.116:3366/cubic?useUnicode=true&characterEncoding=UTF8&serverTimezone=Asia/Shanghai
+#    username: cubic
+#    password: nxE5pGR2wRkhRAb8
     # 使用druid数据源
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
