--- a/cubic-proxy/src/main/resources/application.yml
+++ b/cubic-proxy/src/main/resources/application.yml
@@ -32,8 +32,8 @@ spring:
 
 mybatis-plus:
   #sql打印
-#  configuration:
-#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations: classpath:mapper/**/*.xml
 
 server:
